# AutoAction

./: .gitignore  README.md
android/DataCollection/: aar2dex.sh  aar2dex_server.sh  aar2dex_win.bat  build.gradle  key  key0  settings.gradle
android/DataCollection/ContextActionLibrary/: build.gradle
android/DataCollection/NcnnLibrary/: .gitignore  build.gradle  proguard-rules.pro
android/DataCollection/SharedLibrary/: build.gradle
android/DataCollection/SharedLibrary/src/main/cpp/: CMakeLists.txt
android/DataCollection/SharedLibrary/src/main/cpp/src/: ActionNet.cpp  main.cpp
android/DataCollection/app/: build.gradle
android/DataCollection/app/release/: output-metadata.json
android/DataCollection/contextactionlibrary/: build.gradle
android/DataCollection/gradle/wrapper/: gradle-wrapper.properties
android/LoadAtRuntime/SimpleLibrary/: settings.gradle
android/SimpleExample/: build.gradle  gradle.properties  settings.gradle
android/SimpleExample/app/: build.gradle
backend/lstm/: .gitignore  1.py  1.sh  gen.sh  main.py  main_bak.py  onnx2ncnn  run.py  run.sh
backend/process/src/: dataset.py  main.py
backend/server/: .gitignore  requirements.txt
backend/server/request/: add_record_local.sh  get_tasklist_local.sh  local_upload_file.sh  test_record_local.sh  update_tasklist.sh
backend/server/script/: convert2ncnn.sh
backend/server/src/: .main.py.swp  detect.py  evaluate.py  fileUtils.py  file_utils.py  main.py  record.py  test.py  train_process.py  utils.py  visual.py
script/: download_models.sh  download_ncnn_sdk.sh
(+527 files in other folders)
